--- a/English.lproj/BackingView.xib
+++ b/English.lproj/BackingView.xib
@@ -17,7 +17,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.Metadata"/>
 		<array class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<object class="NSCustomObject" id="1001">
-				<string key="NSClassName">BackingPaneController</string>
+				<string key="NSClassName">BackingViewController</string>
 			</object>
 			<object class="NSCustomObject" id="1003">
 				<string key="NSClassName">FirstResponder</string>
@@ -564,15 +564,15 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">BackingPaneController</string>
+					<string key="className">BackingViewController</string>
 					<string key="superclassName">NSViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="backingBox">NSBox</string>
 						<string key="buttonBox">NSBox</string>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/BackingPane/BackingPaneController.h</string>
+						<string key="majorKey">IBUserSource</string>
+						<string key="minorKey"/>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -599,7 +599,7 @@
 					<string key="className">MacHgDocument</string>
 					<string key="superclassName">NSDocument</string>
 					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="actionSwitchViewToBackingPane:">id</string>
+						<string key="actionSwitchViewToBackingView:">id</string>
 						<string key="actionSwitchViewToBrowserPane:">id</string>
 						<string key="actionSwitchViewToDifferencesView:">id</string>
 						<string key="actionSwitchViewToHistoryView:">id</string>
