--- a/English.lproj/InitializationWizard.xib
+++ b/English.lproj/InitializationWizard.xib
@@ -54,13 +54,13 @@
 			<object class="NSWindowTemplate" id="236651486">
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{663, 496}, {480, 221}}</string>
+				<string key="NSWindowRect">{{663, 470}, {532, 247}}</string>
 				<int key="NSWTFlags">603979776</int>
 				<string key="NSWindowTitle">Enter UserName</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
-				<string key="NSWindowContentMaxSize">{1000, 221}</string>
-				<string key="NSWindowContentMinSize">{480, 221}</string>
+				<string key="NSWindowContentMaxSize">{1000, 247}</string>
+				<string key="NSWindowContentMinSize">{480, 247}</string>
 				<object class="NSView" key="NSWindowView" id="204952765">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -69,13 +69,17 @@
 						<object class="NSTextField" id="561244991">
 							<reference key="NSNextResponder" ref="204952765"/>
 							<int key="NSvFlags">298</int>
-							<string key="NSFrame">{{17, 87}, {446, 76}}</string>
+							<string key="NSFrame">{{114, 106}, {401, 75}}</string>
 							<reference key="NSSuperview" ref="204952765"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="535731472">
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">1346502656</int>
-								<string key="NSContents">By default Mercurial uses a username of the form 'user@localhost' for commits. However, it is best to use a more identifiable name in your commits. Thus please enter a user name of the form initials &lt;user@somehost.com&gt; below, and this value will be saved in your Mercurial configuration file. </string>
+								<string type="base64-UTF8" key="NSContents">QnkgZGVmYXVsdCBNZXJjdXJpYWwgdXNlcyBhIHVzZXJuYW1lIG9mIHRoZSBmb3JtICd1c2VyQGxvY2Fs
+aG9zdCcgZm9yIGNvbW1pdHMuIEhvd2V2ZXIsIGl0IGlzIGJlc3QgdG8gdXNlIGEgbW9yZSBpZGVudGlm
+aWFibGUgbmFtZSBpbiB5b3VyIGNvbW1pdHMuIFRodXMgcGxlYXNlIGVudGVyIGEgdXNlciBuYW1lIG9m
+IHRoZSBmb3JtOgogIGluaXRpYWxzIDx1c2VyQHNvbWVob3N0LmNvbT4gYmVsb3csIGFuZCB0aGlzIHZh
+bHVlIHdpbGwgYmUgc2F2ZWQgaW4geW91ciBNZXJjdXJpYWwgY29uZmlndXJhdGlvbiBmaWxlLiA</string>
 								<object class="NSFont" key="NSSupport">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">11</double>
@@ -110,7 +114,7 @@
 								<object class="NSTextField" id="95884585">
 									<reference key="NSNextResponder" ref="657810365"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrame">{{17, 15}, {442, 22}}</string>
+									<string key="NSFrame">{{17, 15}, {494, 22}}</string>
 									<reference key="NSSuperview" ref="657810365"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSTextFieldCell" key="NSCell" id="461948464">
@@ -128,7 +132,7 @@
 									</object>
 								</object>
 							</object>
-							<string key="NSFrame">{{0, 171}, {480, 51}}</string>
+							<string key="NSFrame">{{0, 197}, {532, 51}}</string>
 							<reference key="NSSuperview" ref="204952765"/>
 							<object class="NSColor" key="BWGBFillStartingColor">
 								<int key="NSColorSpace">1</int>
@@ -159,7 +163,7 @@
 						<object class="NSTextField" id="950156270">
 							<reference key="NSNextResponder" ref="204952765"/>
 							<int key="NSvFlags">290</int>
-							<string key="NSFrame">{{99, 60}, {361, 22}}</string>
+							<string key="NSFrame">{{117, 60}, {395, 22}}</string>
 							<reference key="NSSuperview" ref="204952765"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="541249695">
@@ -171,6 +175,7 @@
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">1044</int>
 								</object>
+								<string key="NSPlaceholderString">initials &lt;user@domain.com&gt;</string>
 								<reference key="NSControlView" ref="950156270"/>
 								<bool key="NSDrawsBackground">YES</bool>
 								<object class="NSColor" key="NSBackgroundColor">
@@ -193,7 +198,7 @@
 						<object class="NSTextField" id="860211195">
 							<reference key="NSNextResponder" ref="204952765"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{17, 62}, {77, 17}}</string>
+							<string key="NSFrame">{{35, 62}, {77, 17}}</string>
 							<reference key="NSSuperview" ref="204952765"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="40912354">
@@ -209,7 +214,7 @@
 						<object class="NSButton" id="1035293364">
 							<reference key="NSNextResponder" ref="204952765"/>
 							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{338, 12}, {128, 32}}</string>
+							<string key="NSFrame">{{390, 12}, {128, 32}}</string>
 							<reference key="NSSuperview" ref="204952765"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="237831944">
@@ -229,7 +234,7 @@
 						<object class="NSButton" id="589042976">
 							<reference key="NSNextResponder" ref="204952765"/>
 							<int key="NSvFlags">289</int>
-							<string key="NSFrame">{{230, 12}, {96, 32}}</string>
+							<string key="NSFrame">{{282, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="204952765"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="501951544">
@@ -246,13 +251,45 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
+						<object class="NSImageView" id="670402076">
+							<reference key="NSNextResponder" ref="204952765"/>
+							<int key="NSvFlags">268</int>
+							<object class="NSMutableSet" key="NSDragTypes">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSArray" key="set.sortedObjects">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+									<string>Apple PDF pasteboard type</string>
+									<string>Apple PICT pasteboard type</string>
+									<string>Apple PNG pasteboard type</string>
+									<string>NSFilenamesPboardType</string>
+									<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
+									<string>NeXT TIFF v4.0 pasteboard type</string>
+								</object>
+							</object>
+							<string key="NSFrame">{{20, 112}, {64, 64}}</string>
+							<reference key="NSSuperview" ref="204952765"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSImageCell" key="NSCell" id="81505050">
+								<int key="NSCellFlags">130560</int>
+								<int key="NSCellFlags2">33554432</int>
+								<object class="NSCustomResource" key="NSContents">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">identity</string>
+								</object>
+								<int key="NSAlign">0</int>
+								<int key="NSScale">0</int>
+								<int key="NSStyle">0</int>
+								<bool key="NSAnimates">YES</bool>
+							</object>
+							<bool key="NSEditable">YES</bool>
+						</object>
 					</object>
-					<string key="NSFrameSize">{480, 221}</string>
+					<string key="NSFrameSize">{532, 247}</string>
 					<reference key="NSSuperview"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
-				<string key="NSMinSize">{480, 243}</string>
-				<string key="NSMaxSize">{1000, 243}</string>
+				<string key="NSMinSize">{480, 269}</string>
+				<string key="NSMaxSize">{1000, 269}</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -404,6 +441,7 @@
 							<reference ref="589042976"/>
 							<reference ref="950156270"/>
 							<reference ref="860211195"/>
+							<reference ref="670402076"/>
 						</object>
 						<reference key="parent" ref="236651486"/>
 					</object>
@@ -500,6 +538,20 @@
 						<reference key="object" ref="501951544"/>
 						<reference key="parent" ref="589042976"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">819</int>
+						<reference key="object" ref="670402076"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="81505050"/>
+						</object>
+						<reference key="parent" ref="204952765"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">820</int>
+						<reference key="object" ref="81505050"/>
+						<reference key="parent" ref="670402076"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -534,14 +586,14 @@
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{425, 618}, {480, 221}}</string>
+					<string>{{425, 592}, {532, 247}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{425, 618}, {480, 221}}</string>
+					<string>{{425, 592}, {532, 247}}</string>
 					<boolean value="YES"/>
 					<boolean value="YES"/>
 					<boolean value="YES"/>
-					<string>{1000, 221}</string>
-					<string>{480, 221}</string>
+					<string>{1000, 247}</string>
+					<string>{480, 247}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -575,7 +627,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">816</int>
+			<int key="maxID">820</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -752,6 +804,22 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">Foundation.framework/Headers/NSFormatter.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSImageCell</string>
+					<string key="superclassName">NSCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">AppKit.framework/Headers/NSImageCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSImageView</string>
+					<string key="superclassName">NSControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">AppKit.framework/Headers/NSImageView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
